log
Thu 28 Mar 2024 07:15:56 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:11: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |    List * lista = (List *)malloc(sizeof(List));
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
d0cb38c
Thu 28 Mar 2024 07:16:04 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e2a94a6
Thu 28 Mar 2024 07:18:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
61a3346
Thu 28 Mar 2024 07:19:33 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
cb5b0a5
Thu 28 Mar 2024 07:20:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2530c53
Thu 28 Mar 2024 07:21:35 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
43125a6
Thu 28 Mar 2024 07:22:50 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
dd34d60
Thu 28 Mar 2024 07:23:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:39:10: error: dereferencing ‘void *’ pointer [-Werror]
   39 |   return *dato;
      |          ^~~~~
list.c:39:10: error: void value not ignored as it ought to be
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e0d5300
Thu 28 Mar 2024 07:24:41 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:8: error: ‘lista’ is a pointer; did you mean to use ‘->’?
   33 |   lista.head = NULL;
      |        ^
      |        ->
list.c: In function ‘firstList’:
list.c:41:10: error: dereferencing ‘void *’ pointer [-Werror]
   41 |   return *dato;
      |          ^~~~~
list.c:41:10: error: void value not ignored as it ought to be
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
23f381c
Thu 28 Mar 2024 07:24:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:10: error: dereferencing ‘void *’ pointer [-Werror]
   41 |   return *dato;
      |          ^~~~~
list.c:41:10: error: void value not ignored as it ought to be
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b73dfa1
Thu 28 Mar 2024 07:25:26 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
b5694c0
Thu 28 Mar 2024 07:26:43 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
623d696
Thu 28 Mar 2024 07:28:31 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9cb48a4
Thu 28 Mar 2024 07:29:00 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 15/70
372bb42
Thu 28 Mar 2024 07:30:20 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
9c55810
Thu 28 Mar 2024 07:30:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e9ae75e
Thu 28 Mar 2024 07:30:58 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
ca125c6
Thu 28 Mar 2024 07:31:50 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
ebe61eb
Thu 28 Mar 2024 07:33:32 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
a0c846a
Thu 28 Mar 2024 07:34:29 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
1ce2a26
